# cosmic_python

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  example.env  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  requirements.txt  services.py  test.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py  test_services.py
adapters/: __init__.py  orm.py  repository.py
app/: __init__.py  config.py
app/adapters/: orm.py  repository.py
app/domain/: commands.py  events.py  model.py
app/entrypoints/: __init__.py  flask_app.py
app/service_layer/: handlers.py  message_bus.py  services.py  unit_of_work.py
app/tests/: conftest.py  random_refs.py
app/tests/e2e/: test_api.py
app/tests/integration/: test_orm.py  test_repository.py  test_uow.py
app/tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
entrypoints/: flask_app.py
service_layer/: services.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_api.py
tests/integration/: __init__.py  test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
