[tool.poetry]
name = "cosmic_python"
version = "0.1.0"
description = "Poetry environment for cosmic python book"
authors = ["michaelbest55 <michaelbest55@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
