[tool.poetry]
name = "cosmic_python"
version = "0.1.0"
description = "Poetry environment for cosmic python book"
authors = ["michaelbest55 <michaelbest55@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
SQLAlchemy = "^1.4.31"
Flask = "^2.0.3"
psycopg2-binary = "^2.9.3"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
SQLAlchemy = "^1.4.31"
sqlalchemy-stubs = "^0.4"
requests = "^2.27.1"
types-requests = "^2.27.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | lists/static
)/
'''

[tool.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "sqlmypy"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
python_files =  ["test.py", "test_*.py", "*_tests.py"]
addopts = "-rP"
